// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useSettingsStore > localStorage > should load settings from localStorage 1`] = `
{
  "calculateBreaks": false,
  "locale": "fr",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "roundTimes": false,
  "themeMode": "dark",
  "themePrimary": "red",
}
`;

exports[`useSettingsStore > should have a default state 1`] = `
{
  "calculateBreaks": false,
  "locale": "en",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "roundTimes": false,
  "themeMode": "dark",
  "themePrimary": "sky",
}
`;

exports[`useSettingsStore > updateSettings > should update settings 1`] = `
{
  "calculateBreaks": false,
  "locale": "de",
  "openTimeDetailsOnStart": false,
  "openTimeDetailsOnStop": false,
  "roundTimes": false,
  "themeMode": "dark",
  "themePrimary": "sky",
}
`;
